- Source-to-source instrumentation via PDT on Blue Gene systems was
  reenabled for PDT versions newer than 3.18.
- Score-P takes advantage from compilers to initialize the measurement
  system automatically before triggering any event. This also ensures
  that the interrupt sources for sampling are registered as early as
  possible and in the case when no compiler instrumention is available.
- A synchronization callback was added to metric plugin API. A metric
  plugin can register a synchronization callback which is called every
  time Score-P starts clock synchronization. The synchronization callback
  contains one argument specifying the point in time in more detail. At
  the moment we distinguish synchronization at initialization, during
  measurement run, and at finalization. As a result the synchronization
  callback allows metric plugins to detect start and end points of
  measurement intervals.

User tools and API improvements and changes:

- A Score-P installation provides new instrumentation wrappers which
  simplify the application instrumentation of autotools and CMake based
  projects.  Please consult the usage instruction of the 'scorep-wrapper'
  command.
- The option --pomp does not take any options any more.
- Specific options for OPARI2 are passed via the
  --opari=<parameter-list> option.
- To enable or disable instrumentation of OpenMP the options
  --openmp and --noopenmp have been added. Note that for compile
  units with enabled OpenMP compilerflag, instrumentation is
  enabled by default. However, when manually disabling, some
  instrumentation must still be carried out to ensure a
  thread-safe execution of the measurement system.
- POMP user instrumentation is no longer automatically activated
  together with OpenMP instrumentation. The --pomp flag has to be
  explicitly specified with the scorep command.
- On Cray systems, compiler instrumentation does not add '-G2' option
  anymore, which disables some optimizations.